overrides for animating visibility fix of upload label, add mocks to all stories

--- a/src/components/Customer/PPM/Closeout/WeightTicketForm/WeightTicketForm.module.scss
+++ b/src/components/Customer/PPM/Closeout/WeightTicketForm/WeightTicketForm.module.scss
@@ -51,6 +51,16 @@
     }
   }
 
+  /* FilePond attempts to do some animating with inline styling but the label never transitions to visible in some
+   browser environments. This might explain past Happo errors where labels were blank in the mobile visual diffs.
+   Maybe we could make this a global fix for orders uploads too. I don't see another way to disable this animation. */
+  :global(.filepond--drop-label) {
+    transform: unset !important;
+    opacity: 100 !important;
+    visibility: visible !important;
+    pointer-events: all !important;
+  }
+
   fieldset + fieldset {
     @include u-margin-y(2);
   }
